<resources>
    <string name="app_name">tanom</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search">Search</string>
    <string name="error_text">Error internet connection</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="auth">Auth</string>
    <string name="ad_details">Ad Details</string>
    <string name="to_search">To search</string>
    <string name="signin_or_signup_text">Login or register to use the features</string>
    <string name="login_or_signup">Login or register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_enter">Login</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="error_auth_text">Invalid username / password or data loading error</string>
</resources>
