<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="ru.tanom.ui.search.SearchFragment"
        android:label="@string/search">
        <action
            android:id="@+id/action_to_ad_details"
            app:destination="@id/adDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ru.tanom.ui.favorites.FavoritesFragment"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/addFragment"
        android:name="ru.tanom.ui.add.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/messageFragment"
        android:name="ru.tanom.ui.message.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="ru.tanom.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/adDetailsFragment"
        android:name="ru.tanom.ui.ad_details.AdDetailsFragment"
        android:label="@string/ad_details">
    </fragment>

</navigation>