<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory = "100"/>
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        android:orderInCategory = "100"/>
    <item
        android:id="@+id/addFragment"
        android:enabled="true"
        android:icon="@drawable/ic_plus"
        android:title="@string/add"
        android:orderInCategory = "100"/>
    <item
        android:id="@+id/messageFragment"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="@string/message"
        android:orderInCategory = "100"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:orderInCategory = "100"/>
</menu>